<?xml version="1.0"?>
<package format="2">
  <name>adma_ros_driver</name>
  <version>0.1.0</version>
  <description>The adma_ros_driver package</description>
  <maintainer email="lakshman.balasubramanian@carissma.eu">Lakshman Balasubramanian</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_geometry_msgs</build_depend>
  <build_depend>adma_msgs</build_depend>
  
  <exec_depend>boost</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_geometry_msgs</exec_depend>
  <exec_depend>adma_msgs</exec_depend>

  <build_export_depend>boost</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_geometry_msgs</build_export_depend>
  <build_export_depend>adma_msgs</build_export_depend>
</package>
