<?xml version="1.0"?>
<package format="2">
  <name>adma_ros2_driver</name>
  <version>0.0.0</version>
  <description>adma_ros_driver originally from https://github.com/lab176344/adma_ros_driver.git</description>
  <maintainer email="gjorgji.nikolovski@alumni.fh-aachen.de">Gjorgji Nikolovski</maintainer>
  <license>Apache 2.0</license>
   
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- adma dependencies -->
  <depend>adma_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
