<?xml version="1.0"?>
<package format="2">
  <name>adma_ros_driver_msgs</name>
  <version>0.0.0</version>
  <description>Collection of several ROS msgs for the adma_ros_driver package</description>

  <maintainer email="ricoschillings@gmail.com">Rico Schillings</maintainer>
  <license>BSD3</license>
  <author email="ricoschillings@gmail.com">Rico Schillings</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
