<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adma_tools_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rico.schillings@hs-offenburg.de">rschilli</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- adma dependencies -->
  <depend>adma_ros_driver_msgs</depend>
  <depend>adma_ros2_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
